iceberg/iceberg-handler/src/test/queries/negative/timetravel_from_to_time_non_iceberg.q
create table tbl_orc (a int, b string);
select * from tbl_orc FOR SYSTEM_TIME FROM '1977-07-25 11:12:13' TO '2023-07-25 11:12:13';